# mandelbrot

./: Cargo.toml  LICENSE
src/: main.rs
