[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.1"
palette = "0.5.0"
rayon = "1.5.0"
sdl2 = { version = "0.34.3", features = [ "bundled" ] }
